# s3zip

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  s3zip.py
.github/workflows/: pypi-version-bump.yaml  run-linters.yaml  unit-tests.yaml
tests/: unittests.py
